--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/T0ruv1m/Wiki/issues"
   },
-  "homepage": "https://github.com/T0ruv1m/Wiki#readme",
+  "homepage": "https://github.com/T0ruv1m/Wiki/Wikis/wiki3/output/",
   "dependencies": {
     "tiddlywiki": "^5.3.5"
   }
